# 311-optrouter

./: .gitignore  README.md  test_optrouter.sh
docs/plans/: 2026-03-06-gateway-arch-layering.md
gateway/: Cargo.toml
gateway/config/: base.toml  dev.toml  models.toml  prod.toml
gateway/src/: error.rs  lib.rs  main.rs
gateway/src/api/: admin.rs  chat.rs  health.rs  health_models.rs  mod.rs  models.rs  usage.rs
gateway/src/application/: auth_service.rs  chat_service.rs  mod.rs
gateway/src/config/: loader.rs  mod.rs  providers.rs
gateway/src/db/: mod.rs  pg.rs  redis.rs  types.rs
gateway/src/metrics/: mod.rs  token_counter.rs
gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs
gateway/src/protocol/: mod.rs  openai.rs
gateway/src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  together.rs
gateway/src/proxy/: mod.rs  stream_proxy copy.rs  stream_proxy.rs
gateway/src/public/: logo.rs
gateway/src/router/: mod.rs  model_router.rs  registry.rs  strategy.rs  types.rs
gateway/src/startup/: bootstrap.rs  healthcheck.rs  mod.rs
scripts/: 2026-03-08-optrouter-migration.sql
web/: .npmrc  package-lock.json  package.json  prisma.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/(admin)/admin/: page.tsx
web/app/(admin)/components/: user-stats-cards.tsx  user-stats-trend-chart.tsx
web/app/(admin)/domain/: admin.repo.ts  admin.service.ts  admin.types.ts
web/app/(admin)/stats/: page.tsx
web/app/(api-keys)/domain/: api-key.repo.ts  api-key.service.ts  api-key.types.ts
web/app/(api-keys)/keys/: page.tsx
web/app/(auth)/components/: auth-guard.tsx
web/app/(auth)/domain/: auth.repo.ts  auth.service.ts  auth.types.ts
web/app/(auth)/login/: page.tsx
web/app/(auth)/register/: page.tsx
web/app/(dashboard)/analytics/: page.tsx
web/app/(dashboard)/billing/: page.tsx
web/app/(dashboard)/components/: activity-log.tsx  api-keys.tsx  billing-history.tsx  dashboard-layout.tsx  dashboard-shell.tsx  model-usage.tsx  popular-models.tsx  quick-start.tsx  sidebar.tsx  (+3 more)
web/app/(recharge)/: actions.ts
web/lib/: auth-client.ts  auth-utils.ts  auth.ts  db.ts  gateway.ts  invite-integration.ts  rewards.ts  stats-utils.ts
web/lib/actions/: types.ts
web/lib/api/: invite.ts
web/lib/hooks/: use-debounce.ts
web/lib/modules/: admin.ts  api-keys.ts  auth.ts  dashboard.ts  invite.ts  recharge.ts
web/lib/payment-gateway/: client.ts  notify-signature.ts
web/lib/types/: invite.ts
web/prisma/: schema.prisma  seed-superadmin.ts
web/prisma/migrations/: add_auth_stats_tables.sql  add_auth_stats_tables_safe.sql  add_invite_recharge_reward_granted.sql  add_invite_reward_config.sql  add_invite_system.sql  add_model_pricing_id.sql  add_providers_and_model_pricing_fields.sql  add_recharge_order.sql  add_usage_logs_requested_actual_provider.sql  rollback_auth_stats_tables.sql  seed_providers.sql
web/prisma/scripts/: seed_superadmin.sql
web/utils/: behaviorTracker.ts
数据库相关/: 1-表结构.md
项目文档/: 0-测试常用命令.md  0-项目快速启动.md  0-项目说明.md  00-计费测试.md  1-用户 api 的实现方式.md  10-待开发.md  11-Superpowers使用说明.md  12-计费设计说明.md  13-web端开发设计规范.md  20-项目市场运营.md  2026-03-08-网关智能选择优化说明optrouter-brief.md  21-接入新模型供应商.md  3-模型调用技术指标.md  30-邀请奖励.md  4-项目目录架构.md  40-web端优化.md  5-登录注册功能说明.md  6-统计功能说明.md  7-数据库表结构.md  8-API Key 使用指南.md  DEVELOPMENT_GUIDE.md  superadmin与gateway修改说明.md  架构重构方案.md
(+85 files in other folders)
