# ============================================================
# Rust Gateway 项目配置文件
# 文件路径: gateway/Cargo.toml
# 功能说明: 定义项目依赖和元数据
# ============================================================

[package]
# 项目名称（Rust crate 需 snake_case）
name = "opt_router_gateway"
# 版本号
version = "0.1.0"
# Rust 版本要求
edition = "2021"
# 项目描述
description = "AI Model Gateway - Unified API for multiple LLM providers"
# 作者信息
authors = ["OptRouter Team"]
# 许可证
license = "MIT"

[dependencies]
# ============================================================
# Web 框架
# ============================================================
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
dashmap = "5"

# ============================================================
# 异步运行时
# ============================================================
tokio = { version = "1", features = ["full"] }

# ============================================================
# HTTP 客户端
# ============================================================
reqwest = { version = "0.11", features = ["json", "stream"] }

# ── 异步流处理 ────────────────────────────────────────────────
futures = "0.3"
bytes = "1"

# ── 序列化 / 反序列化 ─────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ── 数据库（sqlx 直连 Postgres，事务扣费）─────────────────
# runtime-tokio-rustls：异步 + TLS
# bigdecimal：对应 Postgres DECIMAL/NUMERIC 类型，财务精度必须
# uuid / chrono：对应 Postgres UUID / TIMESTAMPTZ 类型
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }
bigdecimal = { version = "0.4", features = ["serde"] }

# ── Redis（Key 元数据缓存，TTL 30min，吊销秒级生效）─────────
# connection-manager：自动重连，多 clone 共享同一连接
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# ── 安全哈希（API Key 明文 → SHA-256，数据库只存 hash）──────
sha2 = "0.10"
hex  = "0.4"

# ── 财务计算辅助 ──────────────────────────────────────────
# BigDecimal 的乘除（用于 cost = tokens / 1000 * price）

# ── 工具库 ────────────────────────────────────────────────
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
once_cell = "1"

# ── 日志 / 追踪 ──────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── 环境变量 ──────────────────────────────────────────────
dotenv = "0.15"

# ── 路由模型限流（网关自我保护，独立于业务配额）────────────
governor = "0.6"

# ── 异步 trait 支持 ───────────────────────────────────────
async-trait = "0.1"

# ============================================================
# 开发 / 测试依赖
# ============================================================
[dev-dependencies]
tokio-test  = "0.4"

# ============================================================
# 构建产物
# ============================================================
[lib]
path = "src/lib.rs"

[[bin]]
# 二进制入口点
name = "gateway"
path = "src/main.rs"

# ============================================================
# 发布优化
# ============================================================
[profile.release]
# 发布模式优化
opt-level = 3
lto = true
codegen-units = 1
